# learning-opengl

./: .gitignore  CMakeLists.txt  README.md
includes/ofs/: camera.h  common.h  shader.h
shader/: fragment.glsl
shader/3d/: vertex.glsl
shader/diffuse_map/: light.fs.glsl
shader/diffusemap/: light.fs_.glsl
shader/light_casters_directional/: light.fs.glsl
shader/light_casters_spotlight/: light.fs.glsl  light.vs.glsl
shader/light_casters_spotlight_softedges/: light.fs.glsl
shader/lighting_basic/: light.fs.glsl
shader/lighting_specular/: light.fs.glsl  light.vs.glsl
shader/material/: light.fs.glsl
shader/point_light/: light.fs.glsl
shader/specular_map/: cube.fs.glsl  light.fs.glsl
shader/texture/: fragment.glsl  vertex.glsl
shader/transformation/: fragment.glsl  vertex.glsl
src/: camera.cpp  camera_class.cpp  camera_movement.cpp  camera_movement_look_around.cpp  camera_movement_zoom.cpp  diffuse_map.cpp  diffusemap.cpp  glad.c  glm_demo.cpp  hello_rectangle.cpp  hello_triangle.cpp  hello_window.cpp  hello_world.cpp  light_casters.cpp  light_casters_directional.cpp  light_casters_spotlight.cpp  light_casters_spotlight_softedges.cpp  lighting.cpp  lighting_basic.cpp  lighting_casters_directional.cpp  lighting_casters_point.cpp  lighting_casters_spotlight.cpp  lighting_casters_spotlight_softedges.cpp  lighting_color.cpp  lighting_specular.cpp  main.cpp  material.cpp  rectangle.cpp  shader.cpp  shader_class.cpp  shader_location.cpp  shader_normal.cpp  shader_uniform.cpp  specular_map.cpp  start_3d.cpp  texture.cpp  transformations.cpp  triangle.cpp
thirdparties/includes/glad/: glad.h
